fixed the collapsing navigation bar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -87,7 +87,6 @@ a {
   }
   &[class*="headroom--not-top"] {
     background: $text-white;
-    // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.09);
     border-bottom: 1px solid #f0f0f0;
     padding-top: 0;
     padding-bottom: 0;
@@ -98,7 +97,7 @@ a {
   font-weight: $font-weight-bold;
 }
 
-.navbar-expand-sm {
+.navbar-expand-md {
   .navbar-nav {
     .nav-link {
       padding: 0 20px;
